# CZ4013_AY22_23_S2

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  README.md  package.json
client/src/: main.rs
client/src/api/: mod.rs  service_consumer.rs  types.rs
rpc_contracts/: Cargo.toml  README.md
rpc_contracts/src/: lib.rs  request.rs  response.rs
rpc_contracts/src/body/: contracts.rs  mod.rs  traits.rs
serde/: .gitignore  Cargo.toml  README.md
serde/serde_derive/: Cargo.toml  README.md
serde/serde_derive/src/: attr.rs  bound.rs  de.rs  lib.rs  ser.rs
serde/src/: ignore.rs  lib.rs  lifetime.rs  macro_export.rs  non_unique_box.rs  types.rs
serde/src/de/: impls.rs  mod.rs
serde/src/json/: de.rs  drop.rs  mod.rs  ser.rs
serde/src/json/value/: array.rs  impls.rs  mod.rs  numbers.rs  object.rs
serde/src/ser/: impls.rs  mod.rs
server/: .gitignore  Cargo.toml  README.md  rustfmt.toml
server/database/: Cargo.toml
server/database/src/: connection.rs  lib.rs  schema.rs  service.rs  types.rs
server/src/: lib.rs  main.rs
server/src/api/: mod.rs  service_handler.rs  types.rs
