[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "^0.2"
serde = { path = "../serde" }
rpc_contracts = { path = "../rpc_contracts" }
tokio.workspace = true
clap.workspace = true
rand.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "client"
path = "src/lib.rs"

