[package]
name = "database"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
serde = { path = "../../serde" }
rpc_contracts = { path = "../../rpc_contracts" }
lazy_static.workspace = true
tokio.workspace = true
rand.workspace = true
rusqlite = { version = "0.28.0", features = ["bundled"] }
deadpool-sqlite = "0.5.0"
